# gRPC-Web-demo

./: README.md
grpc-web-client/: .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  vite.config.ts
grpc-web-client/src/: App.vue  main.ts  useMutation.ts  useTransport.ts
grpc-web-client/src/assets/: main.css
grpc-web-client/src/components/: SimpleRequest.vue  StreamRequest.vue
grpc-web-server/: Cargo.toml  build.rs
grpc-web-server/proto/: buf.yaml
grpc-web-server/proto/echo/v1/: echo.proto
grpc-web-server/proto/greet/v1/: greet.proto
grpc-web-server/src/: main.rs  proto.rs  server.rs
