[package]
name = "grpc-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
tonic-web = "0.11.0"

[build-dependencies]
anyhow = "1.0.82"
tonic-build = "0.11.0"
